--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jest": "26.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
